[package]
name = "publishable"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "Famous \"Hello world\" example"
documentation = "https://doc.rust-lang.org/rust-by-example/hello.html"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
